add Dynamic Menu
