# backend/internal/handler/menu.go
@@ -35,11 +35,14 @@ func NewMenuHandler(
 // @Security Bearer
 // @Param page query int true "页码"
 // @Param pageSize query int true "分页大小"
-// @Success 200 {object} v1.MenuListResponse
+// @Param name query string false "名称"
+// @Param path query string false "路径"
+// @Param access query string false "可见性"
+// @Success 200 {object} v1.MenuSearchResponse
 // @Router /admin/menus [get]
 // @ID ListMenus
 func (h *MenuHandler) ListMenus(ctx *gin.Context) {
-	var req v1.MenuListRequest
+	var req v1.MenuSearchRequest
 	if err := ctx.ShouldBind(&req); err != nil {
 		h.logger.WithContext(ctx).Error("ListMenus bind error", zap.Error(err))
 		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
